--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
 .title {
   font-family: 'Rubik Mono One', sans-serif;
-  padding-left: 5%;
+  font-size: 40px;
+  /* padding-left: 1%; */
+  display: flex;
+  justify-content: center;
+}
+
+.icon {
+  height: 50px;
+  margin-left: 15px;
 }
