--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,4 @@
-.title {
-  font-family: 'Rubik Mono One', sans-serif;
-  font-size: 40px;
-  /* padding-left: 1%; */
+/* .title {
   display: flex;
   justify-content: center;
 }
@@ -9,4 +6,4 @@
 .icon {
   height: 50px;
   margin-left: 15px;
-}
+} */
