--- a/src/CSS/MovieDetails.css
+++ b/src/CSS/MovieDetails.css
@@ -1,6 +1,24 @@
 .backdrop {
-  width: 100%;
-  height: 500px;
+  width: 50%;
+  height: 400px;
+  margin-left: 20px;
+}
+
+.movie-details {
+  font-family: 'Sawarabi Gothic', sans-serif;
+  display: flex;
+}
+
+.details {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+}
+
+.detail-title {
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 
