--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -4,6 +4,7 @@
   padding-left: 5%;
   font-family: 'Ultra', serif;
   font-size: 30px;
+  text-shadow: 3px 3px 5px rgb(211, 200, 200);
 }
 
 .home-button {
