--- a/src/CSS/Filter.css
+++ b/src/CSS/Filter.css
@@ -3,8 +3,11 @@
   font-size: 15px;
   display: flex;
   font-family: 'Sawarabi Gothic', sans-serif;
+  height: 46px;
+  padding-top: 16px;
 }
 
 .filter-label {
   margin-right: 5px;
+  margin-top: 10px;
 }
