--- a/src/CSS/MovieCard.css
+++ b/src/CSS/MovieCard.css
@@ -18,5 +18,16 @@
 .card {
   font-family: 'Sawarabi Gothic', sans-serif;
   color: white;
+  padding-bottom: 15%;
+  padding-top: 15%;
 }
 
+.info-box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+p {
+  margin: 0;
+}
