--- a/src/CSS/MovieDetails.css
+++ b/src/CSS/MovieDetails.css
@@ -25,3 +25,17 @@ p {
   padding: 5px;
 }
 
+.home-button {
+  display: flex;
+  color:white;
+  border: none;
+  background-color: black;
+  font-size: 25px;
+  cursor: pointer;
+  margin-top: 350px;
+  margin-right: 30px;
+  text-decoration: underline;
+  font-family: 'Ultra', serif;
+}
+
+
